@@ -416,6 +416,12 @@ Release 4.2.0 - 2013-01-14
 
         BOOKKEEPER-204: Provide a MetaStore interface, and a mock implementation. (Jiannan Wang via ivank)
 
+	BOOKKEEPER-469: Remove System.out.println from TestLedgerManager (ivank via fpj)
+
+        BOOKKEEPER-205: implement a MetaStore based ledger manager for bookkeeper client. (jiannan via ivank)
+
+        BOOKKEEPER-426: Make auditor Vote znode store a protobuf containing the host that voted (ivank)
+
       hedwig-server:
 
         BOOKKEEPER-250: Need a ledger manager like interface to manage metadata operations in Hedwig (sijie via ivank)
